--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.53.2",
-    "@types/node": "^24.0.12"
+    "@types/node": "^24.0.12",
+    "allure-playwright": "^3.3.0"
   }
 }
